--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,8 +1,8 @@
 ---
 galaxy_info:
-  role_name: utils
+  role_name: rapid7
   author: mergermarket
-  description: Ansible Role that configures Generic Utils
+  description: Ansible Role that install Rapid7
   company: Acuris/Mergermarket
 
   # If the issue tracker for your role is not on github, uncomment the
